# Operating-Systems

./: README.md  bomb1010247.tar  rec-cs3224-2020-10-09.tgz  tail.c  test
HW1/: Makefile  hello.s
HW2/: CMakeLists.txt  Makefile  answer.txt  guess  guess.elf  guess.s  hello  hello.elf  hello.s  linkedList  linkedList.c
HW3/: Makefile  _cat  _echo  _forktest  _grep  _init  _kill  _ln  _ls  _mkdir  _rm  _sanity  _sh  _stressfs  _sumto  _usertests  _wc  _zombie  answers.txt  cat.asm  cat.sym  defs.h  echo.asm  echo.sym  forktest.asm  fs.img  grep.asm  grep.sym  init.asm  init.sym  initcode.out  kernel  kernel.asm  kernel.sym  kill.asm  kill.sym  ln.asm  ln.sym  ls.asm  ls.sym  (+27 more)
